--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,20 @@
+# Ignore Python virtual environments
 venv/
+env/
+
+# Ignore Python cache
 __pycache__/
 *.pyc
 *.pyo
 *.pyd
-.Python
-*.sqlite3
-*.log
+
+# Ignore environment files and logs
 .env
-*.egg-info/
+*.log
+
+# Ignore Jupyter checkpoint files
+.ipynb_checkpoints/
+
+# Ignore system files
+.DS_Store
+Thumbs.db
